--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="mainbox">
-    <img class="illustration-hero" src ='images/illustration-hero.svg' alt="illustration-hero">
+    <img class="illustration-hero" src ='illustration-hero.svg' alt="illustration-hero">
     <div class="textpart">
       <h2> Order Summary</h2>
       <p class="text1">You can now listen to millions of songs, audiobook and podcasts on any device anywhere you like!</p>
